--- a/src/App.css
+++ b/src/App.css
@@ -4,23 +4,27 @@
 }
 
 dialog {
-  width: 700px;
-  position: fixed;
+  width: 100vw;
+  height: 100vh;
   margin: 0 auto;
-  margin-top: 20px;
+  background: none;
   border: none;
-  padding: 2rem 3rem;
-  border-radius: 10px;
-  box-shadow: var(--perfect-shadow);
 }
 dialog::backdrop {
   backdrop-filter: blur(3px);
+  background-color: rgba(0, 0, 0, 0.295);
+}
+.registerForm{
+  background-color: white;
+  max-width: max-content;
+  padding: 2rem 3rem;
 }
 .registerForm_content {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
+  width: 600px;
 }
 .registerForm_title {
   display: flex;
