--- a/src/pages/account/account.css
+++ b/src/pages/account/account.css
@@ -2,7 +2,7 @@
   height: 100dvh;
 }
 
-.my_account{
+.my_account {
   display: flex;
   flex-direction: column;
   min-height: 100%;
@@ -13,96 +13,96 @@
   flex: 1;
   justify-content: center;
   background-color: #f7f7f7;
+  padding-top: 4rem;
 }
-.account__sidebar{
+.account__sidebar {
   background-color: #fffbfb;
   box-shadow: var(--perfect-shadow);
   max-width: 350px;
   padding: 3rem;
   flex: 1;
 }
-.account__sidebar ul{
+.account__sidebar ul {
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
-.account__sidebar a{
+.account__sidebar a {
   color: black;
 }
-.account__sidebar--user{
+.account__sidebar--user {
   display: flex;
   flex-direction: column;
-  line-height: .9;
+  line-height: 0.9;
 }
-.account__sidebar--user span{
+.account__sidebar--user span {
   font-size: 24px;
 }
-.account__sidebar--user strong{
+.account__sidebar--user strong {
   font-size: 32px;
   color: var(--main-color);
   margin-bottom: 1rem;
 }
-.account__sidebar--user a{
+.account__sidebar--user a {
   display: flex;
   align-items: center;
-  gap: .5rem;
+  gap: 0.5rem;
 }
-hr{
-  opacity: .1;
+hr {
+  opacity: 0.1;
 }
-.account__sidebar--user small{
+.account__sidebar--user small {
   font-size: 12px;
 }
-.account__sidebar--user a:hover small{
+.account__sidebar--user a:hover small {
   color: var(--main-color);
 }
-.account__sidebar--user a:hover .svgicon{
+.account__sidebar--user a:hover .svgicon {
   color: var(--main-color);
 }
-.account__sidebar--items a{
+.account__sidebar--items a {
   display: flex;
   align-items: center;
-  gap: .5rem;
+  gap: 0.5rem;
 }
 
-.account__sidebar--items:hover span{
+.account__sidebar--items:hover span {
   font-weight: 600;
-  
 }
 
-.account__sidebar--items .svgiconticket{
+.account__sidebar--items .svgiconticket {
   transform: rotate(30deg);
   width: 20px;
   color: black;
 }
 
-.svgiconitem{
+.svgiconitem {
   width: 20px;
   color: black;
 }
 
-.svgicon{
+.svgicon {
   width: 15px;
   color: gray;
 }
 
-.account__content{
+.account__content {
   flex-grow: 1;
   padding: 3rem;
   max-width: 1080px;
   border-radius: 8px;
 }
 
-.accordeon_tab.myaccount_accordeon{
+.accordeon_tab.myaccount_accordeon {
   box-shadow: var(--perfect-shadow);
   margin-bottom: 1rem;
   border-radius: 8px;
   background-color: white;
 }
-.account__content h2{
+.account__content h2 {
   font-weight: 700;
 }
-.account__user--info{
+.account__user--info {
   margin-top: 2rem;
   margin-bottom: 1rem;
   box-shadow: var(--perfect-shadow);
@@ -113,15 +113,28 @@ hr{
   gap: 2rem;
   border-radius: 8px;
 }
-.account__image--wrapper{
+
+.account__image--wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: .5rem;
+  gap: 0.5rem;
+  position: relative;
   cursor: pointer;
 }
-.account_image{
+.form__upload {
+  position: absolute;
+  margin: 0 auto;
+  width: 100%;
+  height: 100%;
+}
+input[type='file'] {
+  opacity: 0;
+  cursor: pointer;
+}
+
+.account_image {
   border: 2px solid var(--main-color);
   height: 90px;
   width: 90px;
@@ -130,15 +143,17 @@ hr{
   display: flex;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
 }
-.account_image img{
+.account_image img {
   width: 80px;
   height: 80px;
   border-radius: 50%;
   object-fit: cover;
   overflow: hidden;
+  cursor: pointer;
 }
-.mini_icon{
+.mini_icon {
   position: absolute;
   bottom: 0;
   right: 5px;
@@ -152,23 +167,23 @@ hr{
   align-items: center;
   justify-content: center;
 }
-.account__user--details{
+.account__user--details {
   display: flex;
   flex-direction: column;
-  gap: .5rem;
+  gap: 0.5rem;
 }
-.account__user--details .name{
+.account__user--details .name {
   display: flex;
-  gap: .3rem;
+  gap: 0.3rem;
 }
-.svgiconupload{
+.svgiconupload {
   width: 15px;
 }
-.iconsvgphoto{
+.iconsvgphoto {
   width: 60px;
-  opacity: .2;
+  opacity: 0.2;
 }
-.btn__password{
+.btn__password {
   border: none;
   background: none;
   padding: 0;
@@ -176,14 +191,14 @@ hr{
   height: 0px;
   font-family: inherit;
   font-size: 16px;
-  transition: .2s ease;
+  transition: 0.2s ease;
 }
-.btn__password:hover{
+.btn__password:hover {
   color: var(--main-color);
   cursor: pointer;
 }
 
-.btn__save{
+.btn__save {
   font-family: inherit;
   padding: 1rem 2rem;
   font-size: 16px;
@@ -193,21 +208,21 @@ hr{
   background-color: var(--dark-color);
   color: white;
   font-weight: 700;
-  transition: .2s ease;
+  transition: 0.2s ease;
   cursor: pointer;
 }
-.btn__save:hover{
+.btn__save:hover {
   outline: 1px solid var(--dark-color);
   background-color: transparent;
   color: var(--dark-color);
 }
 
-.dialog__content{
+.dialog__content {
   display: grid;
   place-content: center;
   height: 100%;
 }
-.dialog__content-body{
+.dialog__content-body {
   width: 600px;
   background-color: white;
   box-shadow: var(--perfect-shadow);
@@ -215,35 +230,34 @@ hr{
   padding: 2rem 3rem;
   display: flex;
   flex-direction: column;
-
 }
-.dialog__header{
+.dialog__header {
   position: relative;
   display: flex;
   align-items: center;
   margin-bottom: 2rem;
 }
-.dialog__title{
+.dialog__title {
   display: flex;
   flex-direction: column;
-  gap: .5rem;
+  gap: 0.5rem;
 }
-.dialog__title strong{
+.dialog__title strong {
   font-size: 24px;
 }
-.button-dialog{
+.button-dialog {
   position: absolute;
   right: 0;
   top: 0;
 }
-.cta__buttons{
+.cta__buttons {
   display: flex;
   align-items: center;
   justify-content: end;
   width: 100%;
   gap: 1rem;
 }
-.discard__changes{
+.discard__changes {
   background: none;
   border: none;
   outline: none;
@@ -252,14 +266,14 @@ hr{
   padding: 1rem 2rem;
   cursor: pointer;
 }
-.toaster{
+.toaster {
   border-radius: 8px;
 }
-.error-bg{
+.error-bg {
   background-color: crimson;
   color: white;
 }
-.success-bg{
+.success-bg {
   background-color: var(--main-color);
   color: white;
 }
