Add user correct name

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   --main-color: #0197ee;
   --secondary-color: #edc9ff;
   --opaque-color: rgb(40, 61, 59);
-  --dark-color: #0a0908e0;
+  --dark-color: #0a0908;
   --warning-color: rgb(148, 251, 171);
 
   font-family: 'Montserrat', system-ui, -apple-system, BlinkMacSystemFont,
