--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
 :root {
-  --main-color: #0197ee;
-  --secondary-color: #edc9ff;
-  --opaque-color: rgb(40, 61, 59);
-  --dark-color: #0a0908;
+  --main-color: rgb(1, 151, 238);
+  --secondary-color: rgb(237, 201, 255);
+  --opaque-color: rgb(41, 61, 59);
+  --dark-color: rgb(10, 9, 8);
   --warning-color: rgb(148, 251, 171);
 
-  font-family: 'Montserrat', system-ui, -apple-system, BlinkMacSystemFont,
+  font-family: 'Onest', system-ui, -apple-system, BlinkMacSystemFont,
     'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
     sans-serif;
   font-weight: 300;
@@ -28,56 +28,57 @@
 }
 
 @font-face {
-  font-family: 'Montserrat';
+  font-family: 'Onest';
   src: url(./assets/fonts/onest-latin-200-normal.woff2) format('woff2');
   font-weight: 200;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: 'Montserrat';
+  font-family: 'Onest';
   src: url(./assets/fonts/onest-latin-300-normal.woff2) format('woff2');
   font-weight: 300;
   font-style: normal;
   font-display: swap;
 }
+
 @font-face {
-  font-family: 'Montserrat';
+  font-family: 'Onest';
   src: url(./assets/fonts/onest-latin-400-normal.woff2) format('woff2');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: 'Montserrat';
+  font-family: 'Onest';
   src: url(./assets/fonts/onest-latin-100-normal.woff2) format('woff2');
   font-weight: 100;
   font-style: italic;
   font-display: swap;
 }
 @font-face {
-  font-family: 'Montserrat';
+  font-family: 'Onest';
   src: url(./assets/fonts/onest-latin-600-normal.woff2) format('woff2');
   font-weight: 600;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: 'Montserrat';
+  font-family: 'Onest';
   src: url(./assets/fonts/onest-latin-700-normal.woff2) format('woff2');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: 'Montserrat';
+  font-family: 'Onest';
   src: url(./assets/fonts/onest-latin-800-normal.woff2) format('woff2');
   font-weight: 800;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: 'Montserrat';
+  font-family: 'Onest';
   src: url(./assets/fonts/onest-latin-900-normal.woff2) format('woff2');
   font-weight: 900;
   font-style: normal;
@@ -94,7 +95,7 @@
   text-decoration: none;
 }
 h1 {
-  font-family: 'Montserrat', system-ui, -apple-system, BlinkMacSystemFont,
+  font-family: 'Onest', system-ui, -apple-system, BlinkMacSystemFont,
     'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
     sans-serif;
   font-weight: 800;
@@ -102,21 +103,21 @@ h1 {
   font-display: swap;
 }
 h2 {
-  font-family: 'Montserrat', system-ui, -apple-system, BlinkMacSystemFont,
+  font-family: 'Onest', system-ui, -apple-system, BlinkMacSystemFont,
     'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
     sans-serif;
   font-weight: 500;
   font-size: clamp(1rem, 5vw, 2rem);
 }
 h3 {
-  font-family: 'Montserrat', system-ui, -apple-system, BlinkMacSystemFont,
+  font-family: 'Onest', system-ui, -apple-system, BlinkMacSystemFont,
     'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
     sans-serif;
   font-weight: 800;
   font-size: clamp(1rem, 2vw, 1.4rem);
 }
 p {
-  font-family: 'Montserrat', system-ui, -apple-system, BlinkMacSystemFont,
+  font-family: 'Onest', system-ui, -apple-system, BlinkMacSystemFont,
     'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
     sans-serif;
   font-weight: 400;
@@ -124,11 +125,11 @@ p {
   margin-bottom: 2rem;
 }
 span {
-  font-family: 'Montserrat';
+  font-family: 'Onest';
   font-weight: 400;
 }
 strong {
-  font-family: 'Montserrat', system-ui, -apple-system, BlinkMacSystemFont,
+  font-family: 'Onest', system-ui, -apple-system, BlinkMacSystemFont,
     'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
     sans-serif;
   font-weight: 700;
