--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -92,7 +92,7 @@
   width: 80%;
   height: 30px;
   padding: 10px;
-  font-family: montserrat;
+  font-family: Onest;
   font-weight: 600;
   border-radius: 5px;
   border: none;
