--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -264,7 +264,7 @@
   border: none;
   border: 1px solid rgb(168, 168, 168);
   font-size: 16px;
-  font-family: Montserrat;
+  font-family: Onest;
   width: 100%;
   padding: 10px;
 }
@@ -406,7 +406,7 @@
   border: none;
   border: 1px solid rgb(168, 168, 168);
   font-size: 16px;
-  font-family: Montserrat;
+  font-family: Onest;
   width: 100%;
   padding: 10px;
 }
