--- a/src/components/navbarMobile/navbarmobile.css
+++ b/src/components/navbarMobile/navbarmobile.css
@@ -172,7 +172,7 @@
     background-color: #f8f8f8;
     border-radius: 8px;
     font-size: 16px;
-    font-family: 'Montserrat', system-ui, -apple-system, BlinkMacSystemFont,
+    font-family: 'Onest', system-ui, -apple-system, BlinkMacSystemFont,
       'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
       'Helvetica Neue', sans-serif;
     width: 100%;
