--- a/src/components/registerform/registerForm.css
+++ b/src/components/registerform/registerForm.css
@@ -38,7 +38,7 @@
   border-radius: 8px;
   border: 1px solid rgb(168, 168, 168);
   font-size: 16px;
-  font-family: Montserrat;
+  font-family: Onest;
   background-color: rgb(243, 243, 243);
 }
 
@@ -47,7 +47,7 @@
   border: none;
   background-color: var(--dark-color);
   font-size: 18px;
-  font-family: Montserrat;
+  font-family: Onest;
   color: white;
   border-radius: 8px;
   margin-top: 1rem;
@@ -78,7 +78,7 @@
 .password_input-reg input {
   padding: 0;
   border: none;
-  font-family: Montserrat;
+  font-family: Onest;
   background-color: rgb(243, 243, 243);
   font-size: 16px;
   user-select: none;
@@ -99,7 +99,7 @@
   border-radius: 8px;
   border: 1px solid rgb(168, 168, 168);
   font-size: 16px;
-  font-family: Montserrat;
+  font-family: Onest;
   background-color: rgb(243, 243, 243);
 }
 
