--- a/src/pages/home/sections/hero/hero.css
+++ b/src/pages/home/sections/hero/hero.css
@@ -43,7 +43,7 @@
   line-height: 1;
   font-size: clamp(2rem, 5vw, 4rem);
   font-weight: 700;
-  font-family: Montserrat, system-ui, -apple-system, BlinkMacSystemFont,
+  font-family: Onest, system-ui, -apple-system, BlinkMacSystemFont,
     'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
     sans-serif;
 }
