Fix border radius

--- a/src/components/destcard/destcard.css
+++ b/src/components/destcard/destcard.css
@@ -24,7 +24,7 @@
   position: relative;
   margin: 0 auto;
   background-color: var(--dark-color);
-  border-radius: 8px;
+  border-radius: 8px: 8px;
   box-shadow: var(--perfect-shadow);
   cursor: pointer;
   display: flex;
@@ -86,7 +86,7 @@
   font-size: clamp(1rem, 2vw, 1.5rem);
 }
 .face.front {
-  border-radius: 8px;
+  border-radius: 8px: 8px;
 }
 .top {
   display: flex;
