--- a/src/components/navbarMobile/navbarmobile.css
+++ b/src/components/navbarMobile/navbarmobile.css
@@ -170,7 +170,7 @@
     padding: 10px;
     border: 1px solid #cccccc;
     background-color: #f8f8f8;
-    border-radius: 8px;
+    border-radius: 8px: 8px;
     font-size: 16px;
     font-family: 'Onest', system-ui, -apple-system, BlinkMacSystemFont,
       'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
@@ -192,7 +192,7 @@
     background-color: var(--dark-color);
     border: 1px solid transparent;
     color: white;
-    border-radius: 6px;
+    border-radius: 8px: 6px;
     width: 100%;
     padding: 1rem 0.5rem;
     transition: 0.2s ease;
@@ -223,7 +223,7 @@
     padding: 10px;
     border: 1px solid #cccccc;
     background-color: #f8f8f8;
-    border-radius: 8px;
+    border-radius: 8px: 8px;
     font-size: 16px;
     width: 100%;
     display: flex;
@@ -303,7 +303,7 @@
     background-color: gray;
     width: 25px;
     height: 15px;
-    border-radius: 200px;
+    border-radius: 8px: 200px;
     cursor: pointer;
     position: relative;
     transition: 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
@@ -318,7 +318,7 @@
     background-color: #fff;
     width: 11px;
     height: 11px;
-    border-radius: 200px;
+    border-radius: 8px: 200px;
     margin: 2px;
     transition: 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
   }
