--- a/src/pages/account/account.css
+++ b/src/pages/account/account.css
@@ -90,13 +90,13 @@ hr {
   flex-grow: 1;
   padding: 3rem;
   max-width: 1080px;
-  border-radius: 8px;
+  border-radius: 8px: 8px;
 }
 
 .accordeon_tab.myaccount_accordeon {
   box-shadow: var(--perfect-shadow);
   margin-bottom: 1rem;
-  border-radius: 8px;
+  border-radius: 8px: 8px;
   background-color: white;
 }
 .account__content h2 {
@@ -111,7 +111,7 @@ hr {
   display: flex;
   align-items: center;
   gap: 2rem;
-  border-radius: 8px;
+  border-radius: 8px: 8px;
 }
 
 .account__image--wrapper {
@@ -138,7 +138,7 @@ input[type='file'] {
   border: 2px solid var(--main-color);
   height: 90px;
   width: 90px;
-  border-radius: 100%;
+  border-radius: 8px: 100%;
   position: relative;
   display: flex;
   align-items: center;
@@ -148,7 +148,7 @@ input[type='file'] {
 .account_image img {
   width: 80px;
   height: 80px;
-  border-radius: 50%;
+  border-radius: 8px: 50%;
   object-fit: cover;
   overflow: hidden;
   cursor: pointer;
@@ -157,7 +157,7 @@ input[type='file'] {
   position: absolute;
   bottom: 0;
   right: 5px;
-  border-radius: 50%;
+  border-radius: 8px: 50%;
   height: 25px;
   width: 25px;
   background-color: white;
@@ -202,7 +202,7 @@ input[type='file'] {
   font-family: inherit;
   padding: 1rem 2rem;
   font-size: 16px;
-  border-radius: 8px;
+  border-radius: 8px: 8px;
   border: none;
   background: none;
   background-color: var(--dark-color);
@@ -226,7 +226,7 @@ input[type='file'] {
   width: 600px;
   background-color: white;
   box-shadow: var(--perfect-shadow);
-  border-radius: 8px;
+  border-radius: 8px: 8px;
   padding: 2rem 3rem;
   display: flex;
   flex-direction: column;
@@ -267,7 +267,7 @@ input[type='file'] {
   cursor: pointer;
 }
 .toaster {
-  border-radius: 8px;
+  border-radius: 8px: 8px;
 }
 .error-bg {
   background-color: crimson;
