--- a/src/pages/city/city.css
+++ b/src/pages/city/city.css
@@ -67,7 +67,7 @@
 .tags small {
   z-index: 9999;
   background-color: white;
-  border-radius: 8px;
+  border-radius: 8px: 8px;
   padding: 5px 22px;
   color: black;
 }
@@ -94,7 +94,7 @@
   min-width: 220px;
   height: max-content;
   background-color: white;
-  border-radius: 8px;
+  border-radius: 8px: 8px;
   display: flex;
   flex-direction: column;
   gap: 2rem;
@@ -104,7 +104,7 @@
   background-color: white;
   padding: 1rem;
   box-shadow: var(--perfect-shadow);
-  border-radius: 8px;
+  border-radius: 8px: 8px;
   position: relative;
   margin-bottom: 1rem;
 }
@@ -116,7 +116,7 @@
   width: 30%;
   height: 150px;
   object-fit: cover;
-  border-radius: 8px;
+  border-radius: 8px: 8px;
 }
 .city_card-content {
   display: flex;
@@ -155,7 +155,7 @@
 .city_card-tag small {
   padding: 0.2rem 0.5rem;
   background-color: var(--warning-color);
-  border-radius: 8px;
+  border-radius: 8px: 8px;
   display: flex;
   align-items: center;
   gap: 5px;
@@ -171,7 +171,7 @@
   bottom: 0;
   position: absolute;
   padding: 1.5rem 2rem;
-  border-radius: 10px;
+  border-radius: 8px: 10px;
   border-start-start-radius: 200px;
   border-start-end-radius: 0px;
   border-end-start-radius: 0px;
@@ -182,7 +182,7 @@
   color: var(--dark-color);
   background-color: white;
   padding: 0.5rem;
-  border-radius: 8px;
+  border-radius: 8px: 8px;
 }
 .category_list-item {
   display: flex;
@@ -222,7 +222,7 @@
   width: 100%;
   height: 0.4em;
   outline: none;
-  border-radius: 2px;
+  border-radius: 8px: 2px;
   background-color: var(--secondary-color);
   box-shadow: var(--perfect-shadow);
 }
@@ -231,7 +231,7 @@
   appearance: none;
   width: 1.2em;
   height: 1.2em;
-  border-radius: 50%;
+  border-radius: 8px: 50%;
   cursor: pointer;
   z-index: 3;
   position: relative;
@@ -241,7 +241,7 @@
   width: 1.2em;
   height: 1.2em;
   background-color: var(--dark-color);
-  border-radius: 50%;
+  border-radius: 8px: 50%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -258,7 +258,7 @@
   background: #fff;
   width: 0.5em;
   height: 0.5em;
-  border-radius: 50%;
+  border-radius: 8px: 50%;
   transition: 0.3s;
 }
 .range-slider:hover .slider-thumb::before {
@@ -275,7 +275,7 @@
   text-align: center;
   line-height: 35px;
   color: #fff;
-  border-radius: 3px;
+  border-radius: 8px: 3px;
   box-shadow: var(--perfect-shadow), inset 0px 1px 2px var(--main-color);
 }
 
@@ -362,7 +362,7 @@
     width: 100vw;
     padding: 1rem;
     box-shadow: var(--perfect-shadow);
-    border-radius: 8px;
+    border-radius: 8px: 8px;
     display: flex;
     flex-direction: column;
     gap: 30px;
