--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -94,13 +94,13 @@
   padding: 10px;
   font-family: Onest;
   font-weight: 600;
-  border-radius: 8px: 5px;
+  border-radius: 8px;
   border: none;
   outline: none;
 }
 .footer_block input:focus {
   outline: 2px solid var(--main-color);
-  border-radius: 8px: 6px;
+  border-radius: 6px;
 }
 .footer_block button {
   height: 30px;
@@ -109,7 +109,7 @@
   background: none;
   border: none;
   background-color: white;
-  border-radius: 8px: 5px;
+  border-radius: 8px;
   cursor: pointer;
 }
 .footer_block button:hover {
@@ -123,7 +123,7 @@
 .footer_block.socials a {
   color: white;
   padding: 0.5rem;
-  border-radius: 8px: 5px;
+  border-radius: 8px;
   transition: all 0.1s ease-in-out;
 }
 .socials a:hover {
