--- a/src/components/slider/slider.css
+++ b/src/components/slider/slider.css
@@ -10,7 +10,7 @@
   display: block;
   flex-shrink: 0;
   flex-grow: 0;
-  border-radius: 8px: 8px;
+  border-radius: 8px;
   transition: translate 300ms ease-in-out;
 }
 
@@ -32,7 +32,7 @@
 
 .img-slider-btn > *,
 .img-slider-btn:focus-visible > * {
-  border-radius: 8px: 50%;
+  border-radius: 50%;
   background-color: rgb(0 0 0 / 50%);
   backdrop-filter: blur(2px);
   fill: white;
@@ -69,7 +69,7 @@
   color: white;
   background-color: rgb(0 0 0 / 50%);
   backdrop-filter: blur(2px);
-  border-radius: 8px: 50%;
+  border-radius: 50%;
   height: 100%;
   width: 100%;
 }
