--- a/src/components/socialRegister/socialsregister.css
+++ b/src/components/socialRegister/socialsregister.css
@@ -3,7 +3,7 @@
   padding-bottom: 8px;
   position: relative;
   border: 1px solid #ccc;
-  border-radius: 8px: 8px;
+  border-radius: 8px;
   display: flex !important;
   align-items: center;
   justify-content: center;
