--- a/src/pages/city/city.css
+++ b/src/pages/city/city.css
@@ -25,7 +25,7 @@
   min-height: 35vh;
 }
 .city_title {
-  padding-top: 5rem;
+  padding-top: 8rem;
   padding-bottom: 2rem;
   display: flex;
   flex-direction: column;
@@ -35,7 +35,6 @@
 .city_title strong {
   font-size: 80px;
   color: white;
-
   text-shadow: rgba(0, 0, 0, 0.541) 2px 2px 10px;
 }
 .city_details {
@@ -67,7 +66,7 @@
 .tags small {
   z-index: 9999;
   background-color: white;
-  border-radius: 8px: 8px;
+  border-radius: 8px;
   padding: 5px 22px;
   color: black;
 }
@@ -90,11 +89,11 @@
   gap: 2rem;
 }
 .city_content-sidebar {
-  padding: 1rem 1rem;
-  min-width: 220px;
-  height: max-content;
+  padding: 2rem;
+  min-width: 250px;
+  height: auto;
   background-color: white;
-  border-radius: 8px: 8px;
+  border-radius: 8px;
   display: flex;
   flex-direction: column;
   gap: 2rem;
@@ -104,7 +103,7 @@
   background-color: white;
   padding: 1rem;
   box-shadow: var(--perfect-shadow);
-  border-radius: 8px: 8px;
+  border-radius: 8px;
   position: relative;
   margin-bottom: 1rem;
 }
@@ -116,7 +115,7 @@
   width: 30%;
   height: 150px;
   object-fit: cover;
-  border-radius: 8px: 8px;
+  border-radius: 8px;
 }
 .city_card-content {
   display: flex;
@@ -155,7 +154,7 @@
 .city_card-tag small {
   padding: 0.2rem 0.5rem;
   background-color: var(--warning-color);
-  border-radius: 8px: 8px;
+  border-radius: 8px;
   display: flex;
   align-items: center;
   gap: 5px;
@@ -171,7 +170,7 @@
   bottom: 0;
   position: absolute;
   padding: 1.5rem 2rem;
-  border-radius: 8px: 10px;
+  border-radius: 10px;
   border-start-start-radius: 200px;
   border-start-end-radius: 0px;
   border-end-start-radius: 0px;
@@ -182,7 +181,7 @@
   color: var(--dark-color);
   background-color: white;
   padding: 0.5rem;
-  border-radius: 8px: 8px;
+  border-radius: 8px;
 }
 .category_list-item {
   display: flex;
@@ -222,7 +221,7 @@
   width: 100%;
   height: 0.4em;
   outline: none;
-  border-radius: 8px: 2px;
+  border-radius: 2px;
   background-color: var(--secondary-color);
   box-shadow: var(--perfect-shadow);
 }
@@ -231,7 +230,7 @@
   appearance: none;
   width: 1.2em;
   height: 1.2em;
-  border-radius: 8px: 50%;
+  border-radius: 50%;
   cursor: pointer;
   z-index: 3;
   position: relative;
@@ -241,7 +240,7 @@
   width: 1.2em;
   height: 1.2em;
   background-color: var(--dark-color);
-  border-radius: 8px: 50%;
+  border-radius: 50%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -255,10 +254,10 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background: #fff;
-  width: 0.5em;
-  height: 0.5em;
-  border-radius: 8px: 50%;
+  background: var(--main-color);
+  width: .3em;
+  height: .3em;
+  border-radius: 100%;
   transition: 0.3s;
 }
 .range-slider:hover .slider-thumb::before {
@@ -275,8 +274,8 @@
   text-align: center;
   line-height: 35px;
   color: #fff;
-  border-radius: 8px: 3px;
-  box-shadow: var(--perfect-shadow), inset 0px 1px 2px var(--main-color);
+  border-radius: 8px;
+  box-shadow: var(--perfect-shadow);
 }
 
 .free {
@@ -289,6 +288,12 @@
 }
 .showCategories {
   display: none;
+}
+
+.filters{
+  display: flex;flex-direction: column;
+  gap: 2.5rem;
+  border-radius: 8px;
 }
 
 @media (width <= 766px) {
@@ -362,7 +367,7 @@
     width: 100vw;
     padding: 1rem;
     box-shadow: var(--perfect-shadow);
-    border-radius: 8px: 8px;
+    border-radius: 8px;
     display: flex;
     flex-direction: column;
     gap: 30px;
