--- a/src/pages/home/sections/hero/hero.css
+++ b/src/pages/home/sections/hero/hero.css
@@ -63,7 +63,7 @@
   outline: 2px solid rgb(255, 255, 255);
   width: 100%;
   position: absolute;
-  border-radius: 8px: 8px;
+  border-radius: 8px;
 }
 
 .hero_search::before,
@@ -72,7 +72,7 @@
   position: absolute;
   inset: -1px;
   z-index: -1;
-  border-radius: 8px: 8px;
+  border-radius: 8px;
   background: conic-gradient(
     from var(--gradient-angle),
     var(--main-color),
@@ -89,7 +89,7 @@
 }
 .hero_search input {
   width: 100%;
-  border-radius: 8px: 8px;
+  border-radius: 8px;
   border: 1px solid transparent;
   font-family: inherit;
   font-weight: 600;
@@ -113,7 +113,7 @@
   background-color: var(--dark-color);
   border: 1px solid transparent;
   color: white;
-  border-radius: 8px: 7px;
+  border-radius: 7px;
   width: 200px;
   transition: 0.2s ease;
   cursor: pointer;
@@ -135,7 +135,7 @@
   top: 40px;
   opacity: 0;
   visibility: hidden;
-  border-radius: 8px: 8px;
+  border-radius: 8px;
   width: 150%;
   margin: 0 auto;
   padding: 0 2rem;
@@ -202,7 +202,7 @@
   border: 2px solid transparent;
   background-color: var(--dark-color);
   color: white;
-  border-radius: 8px: 8px;
+  border-radius: 8px;
   width: 200px;
   transition: 0.2s ease;
   cursor: pointer;
