--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,11 @@
 :root {
   --main-color: rgb(1, 151, 238);
   --secondary-color: rgb(237, 201, 255);
-  --opaque-color: rgb(41, 61, 59);
-  --dark-color: rgb(10, 9, 8);
+  --opaque-color: rgb(24, 25, 36);
+  --dark-color: #0a0908;
   --warning-color: rgb(148, 251, 171);
+
+  --text-color: rgba(255, 255, 255, 0.623);
 
   font-family: 'Onest', system-ui, -apple-system, BlinkMacSystemFont,
     'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
@@ -34,6 +36,7 @@
   font-style: normal;
   font-display: swap;
 }
+
 @font-face {
   font-family: 'Onest';
   src: url(./assets/fonts/onest-latin-300-normal.woff2) format('woff2');
@@ -49,6 +52,7 @@
   font-style: normal;
   font-display: swap;
 }
+
 @font-face {
   font-family: 'Onest';
   src: url(./assets/fonts/onest-latin-100-normal.woff2) format('woff2');
@@ -56,6 +60,7 @@
   font-style: italic;
   font-display: swap;
 }
+
 @font-face {
   font-family: 'Onest';
   src: url(./assets/fonts/onest-latin-600-normal.woff2) format('woff2');
@@ -63,6 +68,7 @@
   font-style: normal;
   font-display: swap;
 }
+
 @font-face {
   font-family: 'Onest';
   src: url(./assets/fonts/onest-latin-700-normal.woff2) format('woff2');
@@ -70,6 +76,7 @@
   font-style: normal;
   font-display: swap;
 }
+
 @font-face {
   font-family: 'Onest';
   src: url(./assets/fonts/onest-latin-800-normal.woff2) format('woff2');
@@ -77,6 +84,7 @@
   font-style: normal;
   font-display: swap;
 }
+
 @font-face {
   font-family: 'Onest';
   src: url(./assets/fonts/onest-latin-900-normal.woff2) format('woff2');
@@ -94,6 +102,7 @@
   list-style: none;
   text-decoration: none;
 }
+
 h1 {
   font-family: 'Onest', system-ui, -apple-system, BlinkMacSystemFont,
     'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
@@ -102,6 +111,7 @@ h1 {
   font-size: 36px;
   font-display: swap;
 }
+
 h2 {
   font-family: 'Onest', system-ui, -apple-system, BlinkMacSystemFont,
     'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
@@ -109,6 +119,7 @@ h2 {
   font-weight: 500;
   font-size: clamp(1rem, 5vw, 2rem);
 }
+
 h3 {
   font-family: 'Onest', system-ui, -apple-system, BlinkMacSystemFont,
     'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
@@ -116,6 +127,7 @@ h3 {
   font-weight: 800;
   font-size: clamp(1rem, 2vw, 1.4rem);
 }
+
 p {
   font-family: 'Onest', system-ui, -apple-system, BlinkMacSystemFont,
     'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
@@ -124,30 +136,36 @@ p {
   font-size: clamp(0.8rem, 5vw, 1rem);
   margin-bottom: 2rem;
 }
+
 span {
   font-family: 'Onest';
   font-weight: 400;
 }
+
 strong {
   font-family: 'Onest', system-ui, -apple-system, BlinkMacSystemFont,
     'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
     sans-serif;
   font-weight: 700;
 }
+
 small {
   font-size: 13px;
   font-weight: 400;
   color: gray;
 }
+
 html {
   scroll-padding-top: var(--scroll-padding, 100px);
   overflow-x: clip;
 }
+
 body {
   overflow-x: clip;
   max-width: 100vw;
   background-color: #fbf7fd;
 }
+
 .a-heavy {
   display: block;
   color: var(--dark-color);
@@ -156,10 +174,12 @@ body {
   display: block;
   white-space: nowrap;
 }
+
 .a-heavy {
   line-height: 100%;
   font-size: 1.2rem;
 }
+
 .a-light {
   line-height: 20px;
   font-weight: 600;
@@ -168,9 +188,11 @@ body {
   padding: 0 1.25rem 0 1.875rem;
   display: block;
 }
+
 .a-light:hover {
   color: var(--opaque-color);
 }
+
 ::selection {
   color: white;
   background: var(--dark-color);
